--- a/core/invoker/src/main/resources/application.conf
+++ b/core/invoker/src/main/resources/application.conf
@@ -157,7 +157,7 @@ whisk {
     timeouts {
       # The "unusedTimeout" in the ContainerProxy,
       #aka 'How long should a container sit idle until we kill it?'
-      idle-container = 10 minutes
+      idle-container = 10 seconds
       pause-grace = 10 seconds
       keeping-duration = 10 minutes
     }
