--- a/core/invoker/src/main/resources/application.conf
+++ b/core/invoker/src/main/resources/application.conf
@@ -159,7 +159,10 @@ whisk {
       #aka 'How long should a container sit idle until we kill it?'
       idle-container = 1 seconds
       pause-grace = 1 seconds
-      keeping-duration = 1 minutes
+      keeping-duration = 1 seconds
+#         idle-container = 10 minutes
+#         pause-grace = 10 seconds
+#         keeping-duration = 10 minutes
     }
     action-health-check {
       enabled = false # if true, prewarm containers will be pinged periodically and warm containers will be pinged once after resumed
